fix issue where tabs are immediately visible while they're still stacked on load  (#362)
This fixes the visual bug where the active tab seems to be the first tab
and then switches to the actual active tab after the tabs are
positioned.

--- a/frontend/app/tab/tab.less
+++ b/frontend/app/tab/tab.less
@@ -9,6 +9,7 @@
     box-sizing: border-box;
     font-weight: bold;
     color: var(--secondary-text-color);
+    opacity: 0;
 
     .tab-inner {
         position: relative;
